# trabalho-ic

./: CMakeLists.txt  Estratégia.txt  config.h.in
app/: main.cpp  vns.cpp
header/: Grafo.hpp  Importer.hpp  No.hpp  config.h  random.hpp  vnd.h  vns.hpp
instances/SET1-1-2/: 100-35-1-2.ophs  64-45-1-2.ophs
instances/SET1-2-3/: 102-60-2-3.ophs  66-125-2-3.ophs
instances/SET1-3-4/: 100-40-3-4.ophs  64-70-3-4.ophs
instances/SET2-5-3/: 100-45-5-3.ophs  66-60-5-3.ophs
instances/SET2-6-4/: 100-35-6-4.ophs  66-50-6-4.ophs
instances/SET3-10-4/: 100-200-10-4.ophs  66-125-10-4.ophs
instances/SET3-12-5/: 100-180-12-5.ophs  64-75-12-5.ophs
instances/SET5-10-5/: 100-80-10-5.ophs  66-130-10-5.ophs
instances/SET5-10-6/: 100-110-10-6.ophs  66-129-10-6.ophs
instances/SET5-12-4/: 100-130-12-4.ophs  100-50-12-4.ophs
instances/SET5-12-6/: 100-240-12-6.ophs  66-130-12-6.ophs
instances/SET5-15-10/: 100-150-15-10.ophs  (+1 more)
outputs/: SET10instancia1.txt  SET10instancia2.txt  SET11instancia1.txt  SET11instancia2.txt  SET12instancia1.txt  SET13instancia1.txt  SET13instancia2.txt  SET14instancia1.txt  SET14instancia2.txt  SET1instancia1.txt  SET1instancia2.txt  SET2instancia1.txt  SET2instancia2.txt  SET3instancia1.txt  SET3instancia2.txt  SET4instancia1.txt  SET4instancia2.txt  SET5instancia1.txt  SET5instancia2.txt  SET6instancia1.txt  SET6instancia2.txt  SET7instancia1.txt  SET7instancia2.txt  SET8instancia1.txt  SET8instancia2.txt  SET9instancia1.txt  SET9instancia2.txt
src/: grafo.cpp  vnd.cpp  vns.cpp
teste/: teste2.cpp
tests/: CMakeLists.txt  test1.cpp
(+8 files in other folders)
